// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input & button should be disabled while loading 1`] = `
<form
  className="bblfsh-search-panel__container"
  onSubmit={[Function]}
>
  <div
    className="bblfsh-search-panel__field"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="bblfsh-search-panel__text-input"
      disabled={true}
      name="query"
      onChange={[Function]}
      placeholder="UAST Query"
      type="text"
      value="test"
    />
  </div>
  <div
    className="bblfsh-search-panel__field"
  >
    <input
      className="bblfsh-search-panel__button"
      disabled={true}
      type="submit"
      value="Search"
    />
  </div>
  <div
    className="bblfsh-search-panel__field"
  >
    <a
      href="https://doc.bblf.sh/using-babelfish/uast-querying.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      Help
    </a>
  </div>
</form>
`;

exports[`renders correctly 1`] = `
<form
  className="bblfsh-search-panel__container"
  onSubmit={[Function]}
>
  <div
    className="bblfsh-search-panel__field"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="bblfsh-search-panel__text-input"
      name="query"
      onChange={[Function]}
      placeholder="UAST Query"
      type="text"
    />
  </div>
  <div
    className="bblfsh-search-panel__field"
  >
    <input
      className="bblfsh-search-panel__button"
      disabled={true}
      type="submit"
      value="Search"
    />
  </div>
  <div
    className="bblfsh-search-panel__field"
  >
    <a
      href="https://doc.bblf.sh/using-babelfish/uast-querying.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      Help
    </a>
  </div>
</form>
`;

exports[`renders correctly with value 1`] = `
<form
  className="bblfsh-search-panel__container"
  onSubmit={[Function]}
>
  <div
    className="bblfsh-search-panel__field"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <input
      className="bblfsh-search-panel__text-input"
      name="query"
      onChange={[Function]}
      placeholder="UAST Query"
      type="text"
      value="test"
    />
  </div>
  <div
    className="bblfsh-search-panel__field"
  >
    <input
      className="bblfsh-search-panel__button"
      disabled={false}
      type="submit"
      value="Search"
    />
  </div>
  <div
    className="bblfsh-search-panel__field"
  >
    <a
      href="https://doc.bblf.sh/using-babelfish/uast-querying.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      Help
    </a>
  </div>
</form>
`;
